C51-350: Fix icon alignment for case card icons

--- a/scss/components/_case-card.scss
+++ b/scss/components/_case-card.scss
@@ -25,6 +25,10 @@
     }
   }
 
+  .civicase__contact-name-container {
+    line-height: 24px;
+  }
+
   .civicase__contact-icon {
     color: $crm-grayblue-darker;
     font-size: 24px;
